# kpabe-content-filtering

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  common.h  example.mk  main.cpp  result_benchmarks.txt  serialize.mk  test.sh  test_cunit.cpp  test_serial.c  utils.c  utils.h
access_structure/: Makefile  defs.h  test_policy.cpp  zdriver.cpp  zelement_bp.cpp  zlsss.cpp  zlsss.h  zparser.yy
access_structure/legacy/: zattributelist.cpp  zpolicy.cpp
access_structure/legacy/arith/: zelement_bp.cpp  zelement_bp.h  zgroup.h
access_structure/legacy/parser/: zdriver.cpp  zdriver.h  zparser.tab.cc
bench/: CMakeLists.txt  attributes.sh  bench--decrypt--efficiency.cpp  bench--encrypt--efficiency.cpp  bench--encrypt--serialization.cpp  bench--keygen--efficiency.cpp  bench--keygen--serialization.cpp  bench--setup--efficiency.cpp  bench--setup--serialization.cpp  bench-efficiency-dpvs.cpp  bench-efficiency-primitives.cpp  bench-serialization.cpp  bench-utils.cpp  bench.cpp  bench.hpp  benchmark.sh  google-benchmark.sh  new_bench.cpp  new_bench.hpp  new_bench.txt
bench/results/: benchmarks.txt
dpvs/: Makefile  dpvs.c  dpvs.h  dpvs_advanced.cpp  dpvs_advanced.hpp  kp-abe.c  kp-abe.h  main.c  matrix.c  matrix.h  serial.c  serial.h  test_main.c  vector_ec.cpp  vector_ec.hpp
dpvs/dpvs/: dpvs.c  dpvs.h
dpvs/kp-abe/: kp-abe.c  kp-abe.h
dpvs/matrix/: inv_mat.c  matrix.c  matrix.h
examples/: CMakeLists.txt  bench.cpp  example.cpp  examples.cpp  examples.hpp  main.cpp  new_bench.cpp  new_examples.cpp  new_examples.hpp
include/: CMakeLists.txt  keys.hpp  kpabe.hpp  matrix.h  serializer.hpp  utils.h  vector_ec.hpp
keys/: keys.cpp  keys.hpp
kpabe/: dpvs_advanced.cpp  dpvs_advanced.hpp  kpabe.cpp  kpabe.hpp
lsss/: Makefile
openabe/abe/: Makefile  test_abe.cpp  zcontextabe.cpp  zcontextcca.cpp  zcontextcpwaters.cpp  zcontextkpgpsw.cpp
openabe/abe/include/: openabe.h  zcrypto_box.h  zelement.h  zelement_bp.h  zelement_ec.h  zobject.h  zpolicy.h  zprng.h  zscanner.h  zsymcrypto.h  zsymkey.h
results/: bench.sh  benchmarks.txt
schemes/: Makefile  kpabe.c  kpabe.cpp  kpabe.h  serialization.cpp  serialization.h  serialize.mk  test_kpabe.cpp  test_serial.c  test_serialization.cpp
scripts/: Dockerfile  Makefile  benchmarks.sh  build_on_host.sh  build_relic_lsss.sh  compile_lsss.sh  compile_relic_curves.sh  install-dependencies.sh
serial/: serial.c  serial.h
serializer/: serializer.cpp  serializer.hpp
src/: CMakeLists.txt  dpvs.c  kpabe.cpp  matrix.c  serializer.cpp  utils.c  vector_ec.cpp
tests/: CMakeLists.txt  test_abe.cpp
xavier-test/: CMakeLists.txt  json.txt  kpabe_utils.cpp  kpabe_utils.h  main_test.cpp  ssl_utils.cpp  ssl_utils.h
